adl-frontend/src/test/resources/unit/error/semantic/params/Param5.adl
//#SemanticError GroupId=MADL ErrorId=INVALID_REFERENCE_MISSING_ARGUMENT line=5

composite params.Param5 extends 
generic.Generic1<
Composite1
(1)
>
{

}